[gd_scene load_steps=9 format=3 uid="uid://c2rmiqdnwrbe"]

[ext_resource type="StyleBox" uid="uid://ob1icvd5tqxb" path="res://Testing/card_base_stylebox.tres" id="1_6xueo"]
[ext_resource type="Script" uid="uid://8r5c3hy0hp54" path="res://Testing/card_visuals.gd" id="1_7i21k"]
[ext_resource type="Texture2D" uid="uid://bgwwfj51cmsrv" path="res://Assets/2D Assets/Gaslight.png" id="2_7i21k"]
[ext_resource type="Resource" uid="uid://wjg2wxy385od" path="res://Testing/characters/warrior/defend_cards/rook.tres" id="2_f88m0"]
[ext_resource type="Texture2D" uid="uid://wj0gxltorvo0" path="res://Assets/2D Assets/Gatekeep.png" id="3_f88m0"]
[ext_resource type="Texture2D" uid="uid://bxo6u1fy3axrx" path="res://Assets/2D Assets/UnitSymbol.png" id="4_c2hqc"]
[ext_resource type="Texture2D" uid="uid://do3ccr6vtug8d" path="res://Assets/2D Assets/rook.png" id="5_xhj5j"]
[ext_resource type="Texture2D" uid="uid://cj4armnxr8ork" path="res://Assets/2D Assets/Tier.png" id="6_euypk"]

[node name="CardVisuals" type="Control"]
custom_minimum_size = Vector2(150, 240)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7i21k")
card = ExtResource("2_f88m0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("1_6xueo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 150.0
offset_bottom = 54.0
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="GaslightIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_7i21k")
expand_mode = 1
stretch_mode = 5

[node name="GaslightCost" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
text = "0"

[node name="GatekeepIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_f88m0")
expand_mode = 1
stretch_mode = 5

[node name="GatekeepCost" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
text = "0"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 193.0
offset_right = 140.0
offset_bottom = 229.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="UnitIcon" type="TextureRect" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("4_c2hqc")
expand_mode = 1
stretch_mode = 5

[node name="UnitAmount" type="RichTextLabel" parent="MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 24
text = "10"

[node name="Cost" type="Label" parent="."]
visible = false
layout_mode = 1
offset_right = 50.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 30
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -100.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_xhj5j")
expand_mode = 1
stretch_mode = 5

[node name="Tier" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -47.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = 47.0
grow_horizontal = 0
texture = ExtResource("6_euypk")
expand_mode = 1
stretch_mode = 5
